--- a/client/src/components/TestForm/TestForm.module.css
+++ b/client/src/components/TestForm/TestForm.module.css
@@ -10,3 +10,46 @@
   flex-direction: column;
   align-items: center;
 }
+
+.inputField {
+  margin: 10px;
+  border-radius: 5px;
+  /* border: 2px solid red; */
+  height: 40px;
+  width: 300px;
+  display: grid;
+  grid-template-columns: 3fr auto;
+  box-shadow: 0 0 5px #414a4c;
+}
+
+.input {
+  height: 100%;
+  letter-spacing: 1px;
+  grid-column: 1;
+  padding-left: 15px;
+}
+
+.input:focus {
+  outline: none !important;
+  border: 2px solid gold;
+  border-radius: 5px;
+}
+
+.Btn {
+  margin-left: -2px;
+  grid-row: 1;
+  grid-column: 2;
+  height: 100%;
+  padding: 0px 10px;
+  background-color: #0e1111;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: 600;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+  cursor: pointer;
+}
