--- a/client/src/components/TestForm/TestForm.module.css
+++ b/client/src/components/TestForm/TestForm.module.css
@@ -1,3 +1,9 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  overflow: hidden;
+}
+
+/*Seção menu*/
 .formDiv {
   background-color: #555;
   width: 100%;
@@ -5,16 +11,9 @@
   padding: 1rem 2rem;
 }
 
-.previewSection {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .inputField {
   margin: 10px;
   border-radius: 5px;
-  /* border: 2px solid red; */
   height: 40px;
   width: 300px;
   display: grid;
@@ -52,4 +51,27 @@
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
   cursor: pointer;
+}
+
+.mainPage {
+  height: 100%;
+  min-height: 100vh;
+  background: #ddd;
+}
+
+/*Seção de preview:*/
+.previewSection {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+
+.logo {
+  max-width: 300px;
+  position: absolute;
+  z-index: 1;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, 50%);
 }
